// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio components Renders RadioContainer properly 1`] = `
<div
  class="sc-gsDKAQ fzACFK"
>
  Test
</div>
`;

exports[`Radio components Renders RadioDiv properly 1`] = `
<div
  class="sc-bdvvtL brsFqP"
>
  Test
</div>
`;

exports[`Radio components Renders TextRadio properly 1`] = `
<label
  class="sc-hKwDye XYNJj"
>
  Test
</label>
`;
